# bugbug

./: .codecov.yml  .deepsource.toml  .dockerignore  .flake8  .gitignore  .isort.cfg  .isort_BACKUP_27502.cfg  .isort_REMOTE_27502.cfg  .pre-commit-config.yaml  .taskcluster.yml  .travis.yml  Brewfile  CITATION.cff  CONTRIBUTING.md  DB_VERSION.json  MANIFEST.in  README.md  VERSION  _schema_test.py  bug_features.py  bugbug.py  bugzilla.py  classes_more.csv  comment_level_labeler.py  data-pipeline.yml  docker-compose.dev.yml  docker-compose.yml  duplicate.py  extra-nlp-requirements.txt  extra-nn-requirements.txt  feature.txt  get_bugs.py  handwritten_rules_run.py  labels.py  pyproject.toml  pytest.ini  repository.py  requirements.txt  run.py  setup.cfg  (+3 more)
agents/autowebcompat-repro/: Dockerfile  compose.yml  hackbot.toml  package-lock.json  package.json  pyproject.toml  test.sh
agents/autowebcompat-repro/hackbot_agents/autowebcompat_repro/: __main__.py  agent.py  broker.py  browser.py  chrome_devtools_mcp.py  config.py  devtools_mcp.py  firefox_install.py  mcp_servers.py  result.py  setup_profile.py
agents/bug-fix/: Dockerfile  compose.yml  hackbot.toml  pyproject.toml  run_local.py
agents/bug-fix/agent/: __init__.py  __main__.py  config.py  firefox_mcp.py  hackbot.py
agents/bug-fix/agent_runner/: __main__.py
agents/bug-fix/broker/: __main__.py
agents/bug-fix/hackbot_agents/bug_fix/: __init__.py  __main__.py  agent.py  broker.py  config.py
agents/bug-fix/tests/: test_broker.py  test_inputs.py
agents/build-repair/: Dockerfile  README.md  compose.yml  hackbot.toml  pyproject.toml
agents/build-repair/evals/: eval.py  scorer.py  verify.py  worktree.py
agents/build-repair/hackbot_agents/build_repair/: __main__.py  agent.py  broker.py  config.py  logs.py  prompts.py  resolve.py  try_push.py
agents/frontend-triage/: Dockerfile  README.md  compose.yml  hackbot.toml  pyproject.toml
agents/frontend-triage/hackbot_agents/frontend_triage/: __main__.py  (+3 more)
agents/test-plan-generator/: Dockerfile  compose.yml  hackbot.toml  pyproject.toml
agents/test-repair/: Dockerfile  README.md  compose.yml  hackbot.toml  pyproject.toml
agents/test-repair/tests/: test_agent_loop.py  test_resolve.py  test_scaffold.py
http_service/: .dockerignore  Dockerfile  Dockerfile.base  Dockerfile.bg_worker  MANIFEST.in  README.md  app.py  check_models.py  docker-compose.yml  download_models.py  ensure_models.sh  listener.py  models.py  pulse.py  pyproject.toml  requirements.txt  setup.py  utils.py  worker.py
http_service/bugbug_http/: __init__.py  app.py  boot.py  check_models.py  download_models.py  listener.py  models.py  readthrough_cache.py  sentry.py  utils.py  worker.py
http_service/bugbug_http/templates/: doc.html
http_service/pulse/: consumers.py
http_service/templates/: doc.html
http_service/tests/: bugzilla_json_response.py  conftest.py  test_app.py  test_bug_classification.py  test_get_config_specific_groups.py  test_integration.py  test_patch_schedules.py  test_push_schedules.py  test_readthrough_cache.py  test_schedule_tests.py  test_utils.py  test_utils_integration.py
http_service/tests/json_data/: bugzilla_json_response.py
libs/agent-tools/: pyproject.toml
libs/agent-tools/agent_tools/: __init__.py  bugzilla.py  claude_sdk.py  mozilla_vcs.py  mozregression.py  registry.py  searchfox.py
libs/agent-tools/tests/: test_bugzilla.py  test_firefox.py  test_mozregression.py  test_registry.py
libs/hackbot-runtime/: pyproject.toml
libs/hackbot-runtime/hackbot_runtime/: __init__.py  anthropic_wif.py  artifacts.py  changes.py  claude.py  config.py  context.py  errors.py  providers.py  remote_config.py  result.py  results.py  revision.py  runtime.py  source.py  tracing.py  uploader.py  wandb_wif.py
libs/hackbot-runtime/tests/: test_anthropic_wif.py  test_bugzilla_actions.py  test_bugzilla_handler.py  test_changes.py  test_claude.py  test_claude_sdk.py  test_config.py  test_context.py  test_phabricator_actions.py  test_phabricator_handler.py  test_providers.py  test_recorder.py  test_registry.py  test_revision.py  test_runtime.py  test_source.py  test_tracing.py  test_wandb_wif.py
libs/phabricator-client/: pyproject.toml
libs/phabricator-client/phabricator_client/: __init__.py  client.py  config.py  models.py
libs/phabricator-client/tests/: test_client.py
mcp/: Dockerfile  pyproject.toml
mcp/code_review/: .gcloudignore  Dockerfile  pyproject.toml
mcp/scripts/: llms-txt.py
mcp/src/: server.py
mcp/src/bugbug_mcp/: server.py
services/hackbot-api/: Dockerfile  alembic.ini  pyproject.toml
services/hackbot-api/alembic/: env.py
services/hackbot-api/app/: actions_applier.py  agents.py  auth.py  client.py  config.py  gcs.py  jobs.py  main.py  notifications.py  phabricator_webhook.py  pubsub.py  schemas.py
services/hackbot-api/tests/: conftest.py  test_actions_applier.py  test_agents.py  test_events.py  test_finalize_run.py  test_list_runs_api.py  test_notifications.py  test_pubsub.py  test_run_actions_api.py  test_webhooks.py
services/hackbot-pulse-listener/: Dockerfile  README.md  deploy.sh  docker-compose.dev.yml  pyproject.toml
services/hackbot-pulse-listener/app/: __main__.py  client.py  config.py  consumer.py  github.py  lando.py  models.py  notify.py  regression.py  taskcluster.py  worker.py
services/hackbot-pulse-listener/scripts/: send_test_run.py
services/hackbot-pulse-listener/tests/: test_consumer.py  test_github.py  test_notify.py  test_regression.py  test_worker.py
services/mcp/: Dockerfile  cloudbuild.yaml  pyproject.toml
services/mcp/scripts/: llms-txt.py
services/mcp/tests/: test_bugzilla_tools.py
services/reviewhelper-api/: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml  reviewer_groups.yaml
services/reviewhelper-api/alembic/: env.py
services/reviewhelper-api/app/: auth.py  config.py  enums.py  main.py  pricing.py  review_processor.py  reviewer_groups.py  tasks.py
services/reviewhelper-api/tests/: conftest.py  test_review_gating.py  test_reviewer_groups.py
(+1626 files in other folders)
