[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bugbug-http-service"
dynamic = ["version"]
description = "ML tools for Mozilla projects"
license = "MPL-2.0"
requires-python = ">=3.12"
authors = [{ name = "Marco Castelluccio", email = "mcastelluccio@mozilla.com" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
    "apispec-webframeworks==1.2.0",
    "apispec[yaml]==6.10.0",
    "bugbug",
    "cerberus==1.3.8",
    "Flask==3.1.3",
    "flask-apispec==0.11.4",
    "flask-cors==6.0.2",
    "gunicorn==25.1.0",
    "kombu==5.6.2",
    "marshmallow>=3.18.0",
    "requests==2.33.0",
    "rq==2.7.0",
    "rq-dashboard==0.8.6",
    "sentry-sdk[flask]==2.55.0",
]

[project.scripts]
bugbug-http-worker = "bugbug_http.worker:main"
bugbug-http-pulse-listener = "bugbug_http.listener:main"

[tool.uv.sources]
bugbug = { workspace = true }

[tool.hatch.version]
path = "../VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.sdist]
include = ["/bugbug_http"]

[tool.hatch.build.targets.wheel]
packages = ["bugbug_http"]
