[project]
name = "bugbug-mcp"
version = "0.1.0"
description = "BugBug MCP Server"
requires-python = ">=3.12"
dependencies = [
    "bugbug>=0.0.595",
    "fastmcp>=2.12.0",
]

[project.optional-dependencies]
llms-txt = [
    "beautifulsoup4>=4.13.5",
    "requests>=2.32.5",
]

[tool.uv.sources]
bugbug = { path = "..", editable = true }
