[project]
name = "bugbug-mcp"
dynamic = ["version"]
description = "BugBug MCP Server"
requires-python = ">=3.12"
dependencies = [
    "bugbug>=0.0.597",
    "fastmcp>=2.12.0",
    "sentry-sdk>=2.43.0",
]

[project.optional-dependencies]
llms-txt = [
    "beautifulsoup4>=4.13.5",
    "requests>=2.32.5",
]

[tool.uv.sources]
bugbug = { path = "..", editable = true }
