[project]
name = "hackbot-agent-autowebcompat-repro"
version = "0.1.0"
description = "Cloud Run Job image that runs the autowebcompat-repro agent for hackbot-api"
requires-python = ">=3.12"
dependencies = [
    "hackbot-runtime[claude-sdk]",
    "agent-tools[bugzilla]",
    "bugsy",
    "six",
    "claude-agent-sdk>=0.1.30",
    "mcp>=1.0.0",
    "mozdownload",
    "mozinstall",
    "requests>=2.32.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
test = [
  "mypy==2.1.0",
  "ty==0.0.54",
  "ruff==0.15.21",
]

[tool.uv.sources]
hackbot-runtime = { workspace = true }
agent-tools = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hackbot_agents"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "agent_tools",
    "agent_tools.bugzilla",
    "agent_tools.claude_sdk",
    "bugsy",
    "hackbot_runtime",
    "hackbot_runtime.claude",
    "imghdr",
    "mozdownload",
    "mozinstall",
]
ignore_missing_imports = true