[project]
name = "hackbot-agent-bug-fix"
version = "0.1.0"
description = "Cloud Run Job image that runs the bug-fix agent for hackbot-api"
requires-python = ">=3.12"
dependencies = [
    "hackbot-runtime[claude-sdk,phabricator]",
    "agent-tools[bugzilla,firefox]",
    "phabricator-client",
    "bugsy",
    "claude-agent-sdk>=0.1.30",
    "mcp>=1.0.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.uv.sources]
hackbot-runtime = { workspace = true }
agent-tools = { workspace = true }
phabricator-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hackbot_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
