[project]
name = "hackbot-agent-test-plan-generator"
version = "0.1.0"
description = "Cloud Run Job image that generates and runs Firefox QA test plans"
requires-python = ">=3.12"
dependencies = [
    "hackbot-runtime[claude-sdk]",
    "claude-agent-sdk>=0.1.30",
    "mcp>=1.0.0",
    "mozdownload",
    "mozinstall",
]

[tool.uv.sources]
hackbot-runtime = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hackbot_agents"]
