[project]
name = "hackbot-agent-test-repair"
version = "0.1.0"
description = "Cloud Run Job image that runs the test-repair agent for hackbot-api"
requires-python = ">=3.12"
dependencies = [
    "hackbot-runtime[claude-sdk]",
    "agent-tools[bugzilla,firefox]",
    "claude-agent-sdk>=0.1.30",
    "mcp>=1.0.0",
    "requests",
    "mozci~=2.4.8",
    # mozci imports zstandard eagerly (default cache serializer) but only declares
    # it under its optional `cache` extra, so pull it in explicitly.
    "zstandard~=0.25.0",
]

[tool.uv.sources]
hackbot-runtime = { workspace = true }
agent-tools = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hackbot_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
