[project]
name = "hackbot-runtime"
version = "0.1.0"
description = "Agent-side runtime for hackbot-api: signed-policy upload, summary contract, exception handling"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
# claude-agent-sdk building blocks: the action-registry MCP adapter
# (hackbot_runtime.actions.claude_sdk), the streamed-message Reporter
# (hackbot_runtime.claude), and the read-only Bugzilla MCP server
# (hackbot_runtime.mcp.bugzilla, which also needs bugsy). Not needed by
# consumers that only read the summary contract.
claude-sdk = ["claude-agent-sdk>=0.1.30", "bugsy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
