[project]
name = "phabricator-client"
version = "0.1.0"
description = "Small shared Phabricator Conduit client (httpx-based)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phabricator_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
