[project]
name = "hackbot-api"
version = "0.1.0"
description = "Agentic service to accelerate Firefox development"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "bugsy",
    "grizzly-framework",
    "prefpicker",
    "PyYAML",
    "claude-agent-sdk>=0.1.30",
    "sentry-sdk>=2.51.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
