[project]
name = "hackbot-api"
version = "0.1.0"
description = "Agent orchestration platform that runs agents as Cloud Run Jobs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "cloud-sql-python-connector[asyncpg]>=1.5.0",
    "alembic>=1.13.1",
    "google-cloud-storage>=2.16.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-pubsub>=2.21.0",
    "google-auth>=2.29.0",
    "sentry-sdk>=2.51.0",
    "cachetools>=5.3.0",
    "httpx>=0.26.0",
    "hackbot-runtime",
    "phabricator-client",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0"]

[tool.uv.sources]
hackbot-runtime = { workspace = true }
phabricator-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
