[project]
name = "hackbot-pulse-listener"
version = "0.1.0"
description = "Listens to Taskcluster build failures and triggers the build-repair hackbot agent"
requires-python = ">=3.12"
dependencies = [
    "kombu>=5.6,<6",
    "mozci~=2.4.8",
    "taskcluster>=97.1,<100.6",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "sendgrid>=6.12.5",
    "markdown2>=2.4.0",
    "cachetools>=5.3.0",
    "sentry-sdk>=2.51.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
