[project]
name = "bugbug-mcp"
dynamic = ["version"]
description = "BugBug MCP Server"
requires-python = ">=3.12"
dependencies = [
    "bugbug",
    "fastmcp>=2.12.0",
    "sentry-sdk>=2.43.0",
]

[project.optional-dependencies]
llms-txt = [
    "beautifulsoup4>=4.13.5",
    "requests>=2.32.5",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
]

[tool.uv.sources]
bugbug = { git = "https://github.com/mozilla/bugbug", rev = "67078a7892d7998efb6238e75579a70b9985d30a" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
