[project]
name = "bugbug-mcp"
dynamic = ["version"]
description = "BugBug MCP Server"
requires-python = ">=3.12"
dependencies = [
    "bugbug",
    "fastmcp>=3.3.1",
    "sentry-sdk>=2.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/bugbug_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bugbug_mcp"]

[project.optional-dependencies]
llms-txt = [
    "beautifulsoup4>=4.13.5",
    "requests>=2.32.5",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.0",
]

[tool.uv.sources]
bugbug = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
