[project]
name = "reviewhelper-api"
version = "0.1.0"
description = "The backend API for Mozilla's Review Helper"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "alembic-postgresql-enum>=1.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "google-cloud-tasks>=2.15.0",
    "cloud-sql-python-connector[asyncpg]>=1.5.0",
    "python-dotenv>=1.0.0",
    "bugbug",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
bugbug = { git = "https://github.com/mozilla/bugbug", rev = "master" }
