[project]
name = "reviewhelper-api"
version = "0.1.1"
description = "The backend API for Mozilla's Review Helper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.48.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "alembic-postgresql-enum>=1.9.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "google-cloud-tasks>=2.22.0",
    "cloud-sql-python-connector[asyncpg]>=1.20.3",
    "python-dotenv>=1.0.0",
    "bugbug",
    "sentry-sdk>=2.60.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.23.0", "httpx>=0.26.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
bugbug = { git = "https://github.com/mozilla/bugbug", rev = "f8b31eb03fc3b6272980fa45e399732fd7015f3e" }
